Updates from Overleaf

--- a/main.bib
+++ b/main.bib
@@ -57,18 +57,26 @@
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@article{pypeit:joss_pub,
-    doi = {10.21105/joss.02308},
-    url = {https://doi.org/10.21105/joss.02308},
-    year = {2020},
-    publisher = {The Open Journal},
-    volume = {5},
-    number = {56},
-    pages = {2308},
-    author = {J. Xavier Prochaska and Joseph F. Hennawi and Kyle B. Westfall and Ryan J. Cooke and Feige Wang and Tiffany Hsyu and Frederick B. Davies and Emanuele Paolo Farina and Debora Pelliccia},
-    title = {PypeIt: The Python Spectroscopic Data Reduction Pipeline},
-    journal = {Journal of Open Source Software}
+@ARTICLE{2020JOSS....5.2308P,
+       author = {{Prochaska}, J. and {Hennawi}, Joseph and {Westfall}, Kyle and {Cooke}, Ryan and {Wang}, Feige and {Hsyu}, Tiffany and {Davies}, Frederick and {Farina}, Emanuele and {Pelliccia}, Debora},
+        title = "{PypeIt: The Python Spectroscopic Data Reduction Pipeline}",
+      journal = {The Journal of Open Source Software},
+     keywords = {C, Python, data reduction, Jupyter Notebook, spectroscopy, astronomy, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2020,
+        month = dec,
+       volume = {5},
+       number = {56},
+          eid = {2308},
+        pages = {2308},
+          doi = {10.21105/joss.02308},
+archivePrefix = {arXiv},
+       eprint = {2005.06505},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020JOSS....5.2308P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+
 
 @MISC{pypeit:zenodo,
        author = {{Prochaska}, J. Xavier and {Hennawi}, Joseph and {Cooke}, Ryan and
@@ -254,16 +262,16 @@ abstract = {This work presents two software components aimed to relieve the cost
   url = {https://github.com/pytest-dev/pytest},
 }
 
-@software{eric_mandel_2021_596052,
+@software{eric_mandel_2022_6675771,
   author       = {Eric Mandel and
                   Alexey Vikhlinin},
-  title        = {ericmandel/js9},
-  month        = may,
-  year         = 2021,
+  title        = {emandel/js9: v3.8},
+  month        = jun,
+  year         = 2022,
   publisher    = {Zenodo},
-  version      = {v3.4},
-  doi          = {10.5281/zenodo.596052},
-  url          = {https://doi.org/10.5281/zenodo.596052}
+  version      = {v3.8},
+  doi          = {10.5281/zenodo.6675771},
+  url          = {https://doi.org/10.5281/zenodo.6675771}
 }
 
 @online{plotly,
@@ -840,4 +848,209 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2020MNRAS.493.6001L},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+
+@INPROCEEDINGS{2022ASPC..532..559B,
+       author = {{Berry}, David and {Graves}, Sarah and {Bell}, Graham S. and {Currie}, Malcolm and {Draper}, Peter and {Jenness}, Tim},
+        title = "{Starlink - The Original and Best}",
+    booktitle = {Astronomical Society of the Pacific Conference Series},
+         year = 2022,
+       editor = {{Ruiz}, Jose Enrique and {Pierfedereci}, Francesco and {Teuben}, Peter},
+       series = {Astronomical Society of the Pacific Conference Series},
+       volume = {532},
+        month = jul,
+        pages = {559},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022ASPC..532..559B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@software{pickering_timothy_2022_7007991,
+  author       = {Pickering, Timothy and
+                  Conroy, Kyle and
+                  Otor, O. Justin and
+                  Tollerud, Erik},
+  title        = {Specreduce},
+  month        = aug,
+  year         = 2022,
+  note         = {{If you use Specreduce for work/research presented 
+                   in a publication (whether directly, or as a
+                   dependency to another package), please cite the
+                   Zenodo DOI for the appropriate version of
+                   Specreduce.}},
+  publisher    = {Zenodo},
+  version      = {v1.1.0},
+  doi          = {10.5281/zenodo.7007991},
+  url          = {https://doi.org/10.5281/zenodo.7007991}
+}
+
+@INPROCEEDINGS{2008SPIE.7014E..6XB,
+       author = {{Benn}, Chris and {Dee}, Kevin and {Ag{\'o}cs}, Tibor},
+        title = "{ACAM: a new imager/spectrograph for the William Herschel Telescope}",
+    booktitle = {Ground-based and Airborne Instrumentation for Astronomy II},
+         year = 2008,
+       editor = {{McLean}, Ian S. and {Casali}, Mark M.},
+       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+       volume = {7014},
+        month = jul,
+          eid = {70146X},
+        pages = {70146X},
+          doi = {10.1117/12.788694},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2008SPIE.7014E..6XB},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{1999ldss.work..157M,
+       author = {{Molinari}, Emilio and {Conconi}, Paolo and {Pucillo}, Mauro and {Monai}, Sergio},
+        title = "{Galileo \& d.o.lo.res.}",
+    booktitle = {Looking Deep in the Southern Sky},
+         year = 1999,
+       editor = {{Morganti}, R. and {Couch}, W.~J.},
+        month = jan,
+        pages = {157},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1999ldss.work..157M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{2003ASPC..295..489J,
+       author = {{Joye}, W.~A. and {Mandel}, E.},
+        title = "{New Features of SAOImage DS9}",
+    booktitle = {Astronomical Data Analysis Software and Systems XII},
+         year = 2003,
+       editor = {{Payne}, H.~E. and {Jedrzejewski}, R.~I. and {Hook}, R.~N.},
+       series = {Astronomical Society of the Pacific Conference Series},
+       volume = {295},
+        month = jan,
+        pages = {489},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2003ASPC..295..489J},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2017ApJ...848L..32M,
+       author = {{McCully}, Curtis and {Hiramatsu}, Daichi and {Howell}, D. Andrew and {Hosseinzadeh}, Griffin and {Arcavi}, Iair and {Kasen}, Daniel and {Barnes}, Jennifer and {Shara}, Michael M. and {Williams}, Ted B. and {V{\"a}is{\"a}nen}, Petri and {Potter}, Stephen B. and {Romero-Colmenero}, Encarni and {Crawford}, Steven M. and {Buckley}, David A.~H. and {Cooke}, Jeffery and {Andreoni}, Igor and {Pritchard}, Tyler A. and {Mao}, Jirong and {Gromadzki}, Mariusz and {Burke}, Jamison},
+        title = "{The Rapid Reddening and Featureless Optical Spectra of the Optical Counterpart of GW170817, AT 2017gfo, during the First Four Days}",
+      journal = {\apjl},
+     keywords = {binaries: close, gamma-ray burst: individual: GRB 170817A, GRB 130603B, gravitational waves, stars: neutron, stars: winds, outflows, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2017,
+        month = oct,
+       volume = {848},
+       number = {2},
+          eid = {L32},
+        pages = {L32},
+          doi = {10.3847/2041-8213/aa9111},
+archivePrefix = {arXiv},
+       eprint = {1710.05853},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017ApJ...848L..32M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2017Natur.551..210A,
+       author = {{Arcavi}, Iair and {Howell}, D. Andrew and {Kasen}, Daniel and {Bildsten}, Lars and {Hosseinzadeh}, Griffin and {McCully}, Curtis and {Wong}, Zheng Chuen and {Katz}, Sarah Rebekah and {Gal-Yam}, Avishay and {Sollerman}, Jesper and {Taddia}, Francesco and {Leloudas}, Giorgos and {Fremling}, Christoffer and {Nugent}, Peter E. and {Horesh}, Assaf and {Mooley}, Kunal and {Rumsey}, Clare and {Cenko}, S. Bradley and {Graham}, Melissa L. and {Perley}, Daniel A. and {Nakar}, Ehud and {Shaviv}, Nir J. and {Bromberg}, Omer and {Shen}, Ken J. and {Ofek}, Eran O. and {Cao}, Yi and {Wang}, Xiaofeng and {Huang}, Fang and {Rui}, Liming and {Zhang}, Tianmeng and {Li}, Wenxiong and {Li}, Zhitong and {Zhang}, Jujia and {Valenti}, Stefano and {Guevel}, David and {Shappee}, Benjamin and {Kochanek}, Christopher S. and {Holoien}, Thomas W. -S. and {Filippenko}, Alexei V. and {Fender}, Rob and {Nyholm}, Anders and {Yaron}, Ofer and {Kasliwal}, Mansi M. and {Sullivan}, Mark and {Blagorodnova}, Nadja and {Walters}, Richard S. and {Lunnan}, Ragnhild and {Khazov}, Danny and {Andreoni}, Igor and {Laher}, Russ R. and {Konidaris}, Nick and {Wozniak}, Przemek and {Bue}, Brian},
+        title = "{Energetic eruptions leading to a peculiar hydrogen-rich explosion of a massive star}",
+      journal = {\nat},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2017,
+        month = nov,
+       volume = {551},
+       number = {7679},
+        pages = {210-213},
+          doi = {10.1038/nature24030},
+archivePrefix = {arXiv},
+       eprint = {1711.02671},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017Natur.551..210A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2020MNRAS.499.2959H,
+       author = {{Harvey}, E.~J. and {Redman}, M.~P. and {Boumis}, P. and {Akras}, S. and {Fitzgerald}, K. and {Dulaimi}, S. and {Williams}, S.~C. and {Darnley}, M.~J. and {Lam}, M.~C. and {Kopsacheili}, M. and {Derlopa}, S.},
+        title = "{Two new nova shells associated with V4362 Sagittarii and DO Aquilae}",
+      journal = {\mnras},
+     keywords = {line: profiles, (stars:) circumstellar matter, stars: distances, transients: novae, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies, Astrophysics - Instrumentation and Methods for Astrophysics, 85-11},
+         year = 2020,
+        month = dec,
+       volume = {499},
+       number = {2},
+        pages = {2959-2976},
+          doi = {10.1093/mnras/staa2896},
+archivePrefix = {arXiv},
+       eprint = {2009.08272},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020MNRAS.499.2959H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2020MNRAS.496.1243G,
+       author = {{Green}, Matthew J. and {Marsh}, Thomas R. and {Carter}, Philip J. and {Steeghs}, Danny and {Breedt}, Elm{\'e} and {Dhillon}, V.~S. and {Littlefair}, S.~P. and {Parsons}, Steven G. and {Kerry}, Paul and {Gentile Fusillo}, Nicola P. and {Ashley}, R.~P. and {Bours}, Madelon C.~P. and {Cunningham}, Tim and {Dyer}, Martin J. and {G{\"a}nsicke}, Boris T. and {Izquierdo}, Paula and {Pala}, Anna F. and {Pattama}, Chuangwit and {Outmani}, Sabrina and {Sahman}, David I. and {Sukaum}, Boonchoo and {Wild}, James},
+        title = "{Spectroscopic and photometric periods of six ultracompact accreting binaries}",
+      journal = {\mnras},
+     keywords = {white dwarfs, binaries: close, Novae, stars: dwarf novae, cataclysmic variables, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2020,
+        month = aug,
+       volume = {496},
+       number = {2},
+        pages = {1243-1261},
+          doi = {10.1093/mnras/staa1509},
+archivePrefix = {arXiv},
+       eprint = {2005.12616},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020MNRAS.496.1243G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@MISC{2019ascl.soft07012M,
+       author = {{Marsh}, Tom},
+        title = "{molly: 1D astronomical spectra analyzer}",
+     keywords = {Software},
+ howpublished = {Astrophysics Source Code Library, record ascl:1907.012},
+         year = 2019,
+        month = jul,
+          eid = {ascl:1907.012},
+        pages = {ascl:1907.012},
+archivePrefix = {ascl},
+       eprint = {1907.012},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ascl.soft07012M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2022MNRAS.511.4971M,
+       author = {{McWhirter}, Paul Ross and {Lam}, Marco C.},
+        title = "{Identifying blue large amplitude pulsators from Gaia DR2 and ZTF DR3}",
+      journal = {\mnras},
+     keywords = {methods: data analysis, stars: early-type, stars: oscillations, stars: variables: general, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = 2022,
+        month = apr,
+       volume = {511},
+       number = {4},
+        pages = {4971-4980},
+          doi = {10.1093/mnras/stac291},
+archivePrefix = {arXiv},
+       eprint = {2201.11862},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022MNRAS.511.4971M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2022MNRAS.509.4171K,
+       author = {{Keller}, Pascal M. and {Breedt}, Elm{\'e} and {Hodgkin}, Simon and {Belokurov}, Vasily and {Wild}, James and {Garc{\'\i}a-Soriano}, Ignacio and {Wise}, Jacob L.},
+        title = "{Eclipsing white dwarf binaries in Gaia and the Zwicky Transient Faaccility}",
+      journal = {\mnras},
+     keywords = {binaries: eclipsing, white dwarfs, binaries: close, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2022,
+        month = jan,
+       volume = {509},
+       number = {3},
+        pages = {4171-4188},
+          doi = {10.1093/mnras/stab3293},
+archivePrefix = {arXiv},
+       eprint = {2105.14028},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022MNRAS.509.4171K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+
 
